--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "@babel/preset-react": "7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@types/classnames": "^2.2.7",
+    "@types/jest": "^24.0.12",
+    "@types/mocha": "^5.2.6",
     "@types/node": "^11.13.7",
     "@types/react": "^16.8.14",
     "@types/react-dom": "^16.8.4",
     "@types/react-redux": "^7.0.8",
+    "@types/react-test-renderer": "^16.8.1",
     "@types/redux": "^3.6.0",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.1",
