--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "mini-css-extract-plugin": "^0.6.0",
     "node-sass": "^4.11.0",
     "react-test-renderer": "^16.8.6",
+    "react-testing-library": "^7.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.4.3",
