--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.2",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
     "redux": "^4.0.1"
   },
   "devDependencies": {
@@ -31,6 +33,8 @@
     "@types/react": "^16.8.14",
     "@types/react-dom": "^16.8.4",
     "@types/react-redux": "^7.0.8",
+    "@types/react-router": "^4.4.5",
+    "@types/react-router-dom": "^4.3.2",
     "@types/react-test-renderer": "^16.8.1",
     "@types/redux": "^3.6.0",
     "babel-loader": "^8.0.5",
