--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,24 @@
 {
   "compilerOptions": {
-    "allowJs": true,
+    "target": "es6",
+    "module": "es6",
+    "lib": [
+        "dom",
+        "es6",
+        "es2017.object"
+    ],
+    "outDir": "bin",
     "sourceMap": true,
     "allowSyntheticDefaultImports": true,
     "importHelpers": true,
     "moduleResolution": "node",
+    "noEmitOnError": true,
+    "stripInternal": true,
+    "skipLibCheck": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "jsx": "preserve",
     "strict": true
-  },
+},
   "exclude": ["test"]
 }
