--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "webpack-dev-server --mode development --open --hot",
     "build": "webpack --mode production",
     "test": "jest",
-    "test-update": "jest --updateSnapshot"
+    "test-update": "jest --updateSnapshot",
+    "lint": "tslint -c tslint.json 'src/**/*.ts' 'src/**/*.tsx'",
+    "lint-fix": "tslint --fix -c tslint.json 'src/**/*.ts' 'src/**/*.tsx'"
   },
   "keywords": [],
   "author": "",
@@ -50,6 +52,8 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.4.3",
+    "tslint": "^5.16.0",
+    "tslint-react": "^3.6.0",
     "typescript": "^3.4.5",
     "url-loader": "^1.1.2",
     "webpack": "^4.30.0",
