--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "prettier.singleQuote": true,
     "prettier.trailingComma": "all",
     "prettier.arrowParens": "always",
-    "prettier.jsxSingleQuote": true
+    "prettier.jsxSingleQuote": true,
+    "editor.renderWhitespace": "all"
 }
