--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "webpack-dev-server --mode development --open --hot",
     "build": "webpack --mode production",
     "test": "jest",
+    "test-e2e": "cypress run --port 8081",
+    "test-e2e-open": "cypress open --port 8081",
     "test-update": "jest --updateSnapshot",
     "lint": "tslint -c tslint.json 'src/**/*.ts' 'src/**/*.tsx'",
     "lint-fix": "tslint --fix -c tslint.json 'src/**/*.ts' 'src/**/*.tsx'"
@@ -29,6 +31,7 @@
     "@babel/preset-react": "7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@types/classnames": "^2.2.7",
+    "@types/cypress": "^1.1.3",
     "@types/jest": "^24.0.12",
     "@types/mocha": "^5.2.6",
     "@types/node": "^11.13.7",
@@ -41,6 +44,7 @@
     "@types/redux": "^3.6.0",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.1",
+    "cypress": "^3.3.1",
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
