--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
                     <webResources>
                         <resource>
                             <directory>dist</directory>
-                            <targetPath>META-INF/resources</targetPath>
+                            <targetPath>WEB-INF/classes/static</targetPath>
                         </resource>
                     </webResources>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
